# myplugin

./: CMakeLists.txt  Myplugin.json.in  README.md  myplugin.cpp  myplugin.h  myplugin_global.h  mypluginconstants.h  myplugintr.h
.github/workflows/: build_cmake.yml
